# StringBuddyDemo

./: .gitignore  COPYING  README.md  meson.build  msys2_deploy.sh  org.example.App.json
.github/workflows/: msys2_deploy.yml
build-aux/: inno.iss  py.spec
build-aux/meson/: postinstall.py
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: gousername.py  main.py  meson.build  stringbuddy.py  stringbuddydemo.gresource.xml  stringbuddydemo.in  window.py  window.ui
